--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -98,7 +98,7 @@
 
 .footer-heading {
     font-size: 18px;
-    margin-bottom: $spacing-unit / 2;
+    margin-bottom: calc($spacing-unit / 2);
 }
 
 .contact-list,
@@ -110,14 +110,14 @@
 .footer-col-wrapper {
     font-size: 15px;
     color: $grey-color;
-    margin-left: -$spacing-unit / 2;
+    margin-left: calc($spacing-unit / 2);
     @extend %clearfix;
 }
 
 .footer-col {
     float: left;
-    margin-bottom: $spacing-unit / 2;
-    padding-left: $spacing-unit / 2;
+    margin-bottom: calc($spacing-unit / 2);
+    padding-left: calc($spacing-unit / 2);
 }
 
 .footer-col-1 {
@@ -166,7 +166,7 @@
 }
 
 .page-heading {
-    font-size: 20px;
+    font-size: calc($base-font-size * 2);
 }
 
 .post-list {
@@ -185,7 +185,7 @@
 
 .post-link {
     display: block;
-    font-size: 24px;
+    font-size: calc($base-font-size * 2);
 }
 
 
@@ -198,7 +198,7 @@
 }
 
 .post-title {
-    font-size: 42px;
+    font-size: calc($base-font-size * 2.4);
     letter-spacing: -1px;
     line-height: 1;
 
@@ -211,7 +211,7 @@
     margin-bottom: $spacing-unit;
 
     h2 {
-        font-size: 32px;
+        font-size: calc($base-font-size * 2);
 
         @include media-query($on-laptop) {
             font-size: 28px;
@@ -219,7 +219,7 @@
     }
 
     h3 {
-        font-size: 26px;
+        font-size: calc($base-font-size * 1.4);
 
         @include media-query($on-laptop) {
             font-size: 22px;
@@ -227,7 +227,7 @@
     }
 
     h4 {
-        font-size: 20px;
+        font-size: calc($base-font-size * 1.1);
 
         @include media-query($on-laptop) {
             font-size: 18px;
