--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -166,7 +166,7 @@
 }
 
 .page-heading {
-    font-size: calc($base-font-size * 2);
+    font-size: $base-font-size * 2;
 }
 
 .post-list {
@@ -185,7 +185,7 @@
 
 .post-link {
     display: block;
-    font-size: calc($base-font-size * 2);
+    font-size: $base-font-size * 2;
 }
 
 
@@ -198,7 +198,7 @@
 }
 
 .post-title {
-    font-size: calc($base-font-size * 2.4);
+    font-size: $base-font-size * 2.4;
     letter-spacing: -1px;
     line-height: 1;
 
@@ -211,7 +211,7 @@
     margin-bottom: $spacing-unit;
 
     h2 {
-        font-size: calc($base-font-size * 2);
+        font-size: $base-font-size * 2;
 
         @include media-query($on-laptop) {
             font-size: 28px;
@@ -219,7 +219,7 @@
     }
 
     h3 {
-        font-size: calc($base-font-size * 1.4);
+        font-size: $base-font-size * 1.4;
 
         @include media-query($on-laptop) {
             font-size: 22px;
@@ -227,7 +227,7 @@
     }
 
     h4 {
-        font-size: calc($base-font-size * 1.1);
+        font-size: $base-font-size * 1.1;
 
         @include media-query($on-laptop) {
             font-size: 18px;
