--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -33,7 +33,7 @@ h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
-    margin-bottom: $spacing-unit / 1.3;
+    margin-bottom: calc($spacing-unit / 1.3);
 }
 
 
